--- a/Polyglot Pro/Resources/Languages/Swedish/sv_adjectives_appearance.json
+++ b/Polyglot Pro/Resources/Languages/Swedish/sv_adjectives_appearance.json
@@ -1,6 +1,6 @@
 [
     {
-        "expression": "tor",
+        "expression": "torr",
         "translations": {
             "ukrainian": "сухий",
             "english": "dry",
